@@ -12,6 +12,8 @@ What's New in Python 2.5 alpha 1?
 Core and builtins
 -----------------
 
+- __import__ accepts keyword arguments.
+
 - Patch #1460496: round() now accepts keyword arguments.
 
 - Fixed bug #1459029 - unicode reprs were double-escaped.
